--- a/src/Components/Weather.css
+++ b/src/Components/Weather.css
@@ -1,11 +1,14 @@
 .weather {
   place-self: center;
+  text-align: center;
   padding: 40px;
   border-radius: 10px;
   background-image: linear-gradient(45deg, #786df4, #c3bdf2);
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.404), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 }
 .search-bar {
   display: flex;
@@ -31,8 +34,33 @@
   background: transparent;
   color: rgba(0, 0, 0, 0.411);
 }
-.image img {
-  background: none;
-  display: block; /* Remove inline spacing */
-  margin: auto;
+img{
+    padding: 20px;
+    height: 100px;
+}
+.temp{
+    color:white;
+    font-size: 50px;
+}
+.location{
+    color:white;
+    font-size: 20px;
+}
+.col-h{
+    background-color: #756cd6cc;
+    padding: 8px;
+    border-radius: 10px;
+    align-self: left;
+    display: inline-block;
+    margin: 20px;
+    color: white;
+}
+.col-s{
+    background-color: #756cd6cc;
+    color: white;
+    margin: 20px;
+    padding: 8px;
+    border-radius: 10px;
+    align-self: self-end;
+    display: inline-block;
 }
